# diagham-cmake-poc

./: .gitignore  BUG_torus_su2_coulomb.md  CMakeLists.txt  DEFERRED.md  HUBBARD_BENCHMARK.md  LICENSE  README.md
benchmarks/: BENCHMARK.md  fermions_hubbard_square_x_2_y_2_n_4_ns_4_t_1.000000_tp_0.000000_u_4.000000_sz_0.dat.txt  fermions_hubbard_square_x_2_y_4_n_8_ns_8_t_1.000000_tp_0.000000_u_4.000000_sz_0.dat.txt  hubbard_ed.py
cmake/: ApplyUpstreamPatches.cmake  DiagHamHelpers.cmake  config_ac.h.in  verify_build.sh
patches/: 01-FQHECylinderDensity.patch  02-FQHECylinderWithSU2SpinDensity.patch  03-FQHESphereQuasiholesWithSpinTimeReversalSymmetryDensity.patch  04-FCIHofstadterModelCompositeFermions.patch  05-HubbardSquareLatticeModelJ2S2.patch  06-FCIDiceLatticeModel.patch  07-FQHESphereFermionsWithSpinEntanglementEntropyParticlePartition.patch  08-IEEE754PrecisionForEigenvalueOutput.patch  09-FCIHofstadterCorrelationPrecision.patch  10-FCIWannierConstructionEnablement.patch  11-FCIDiceLatticeModelEnablement.patch  PATCHES.md
scripts_cmake/: extract_autotools.py
